--- a/css/styles/style.css
+++ b/css/styles/style.css
@@ -127,23 +127,29 @@ img {
 
 .product-showcase {
   width: 15.625rem;
+  height: 18.75rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .product-showcase .image {
-  height: 9.375rem;
+  height: 8.75rem;
   text-align: center;
 }
 
 .product-showcase .image img {
-  width: 11.25rem;
+  width: 10rem;
 }
 
 .product-showcase-text {
+  margin-top: 0.625rem;
+  height: 5.3125rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .prices {
@@ -153,7 +159,19 @@ img {
 }
 
 .prices * {
-  margin: 0 0.125rem;
+  margin: 0 0.3125rem;
+}
+
+.add-button {
+  display: flex;
+  padding: 0.625rem;
+  border: none;
+  border-radius: 0.3125rem;
+  cursor: pointer;
+}
+
+.add-button * {
+  margin: 0 0.1875rem;
 }
 
 .shopping-cart {
@@ -169,7 +187,7 @@ img {
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-  transition: 0.2s;
+  transition: 0.25s;
 }
 
 .shopping-cart-show {
