--- a/css/styles/style.css
+++ b/css/styles/style.css
@@ -73,8 +73,8 @@ img {
 .hero-bg {
   width: 100%;
   height: calc(100vh - 300px);
-  background: url(../../media/images/hero/pexels-karolina-grabowska-4198415.jpg)
-    center/cover no-repeat;
+  /* background: url(../../media/images/hero/pexels-karolina-grabowska-4198415.jpg)
+    center/cover no-repeat; */
   color: white;
   text-align: center;
   display: flex;
@@ -174,6 +174,10 @@ img {
   margin: 0 0.1875rem;
 }
 
+.disable-button {
+  pointer-events: none;
+}
+
 .shopping-cart {
   width: 31.25rem;
   background-color: white;
@@ -182,7 +186,7 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 0.625rem;
-  padding: 1.25rem 0;
+  padding: 0.625rem 0;
   position: fixed;
   top: 100%;
   left: 50%;
@@ -195,6 +199,10 @@ img {
   transform: translate(-50%, -50%);
 }
 
+.shopping-cart .title {
+  font-size: 1rem;
+}
+
 .separator {
   width: 100%;
   margin: 0.625rem 0 1.25rem 0;
@@ -203,20 +211,40 @@ img {
 
 .products-list {
   width: 100%;
-  padding-left: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .product {
+  width: 25rem;
+  margin: 0.3125rem 0;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.product .image {
+.item-cart-info .image {
+  height: 6.25rem;
   border: 1px solid var(--light-font-color);
   padding: 0.625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-cart-info .image img {
+  width: 4.6875rem;
+}
+
+.item-cart-info {
+  display: flex;
+  align-items: center;
 }
 
 .product-text {
-  margin-left: 1.5625rem;
+  margin-left: 0.625rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -228,14 +256,19 @@ img {
   margin: 0.125rem 0;
 }
 
+.product-name {
+  font-size: 1rem;
+}
+
 .whole-price,
 .showcase-full-price {
   color: var(--light-font-color);
+  font-size: 0.875rem;
 }
 
 .discount-price,
 .showcase-discount-price {
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 700;
 }
 
@@ -244,6 +277,18 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 0 2.5rem;
+  font-size: 0.875rem;
+}
+
+.change-amount {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.change-amount i {
+  cursor: pointer;
 }
 
 .finish-button {
@@ -253,8 +298,8 @@ img {
 
 .finish-button button {
   width: 100%;
-  height: 4.6875rem;
-  font-size: 2rem;
+  height: 3.75rem;
+  font-size: 1.625rem;
   font-weight: 700;
   background-color: var(--button-background);
   border: none;
