--- a/css/styles/style.css
+++ b/css/styles/style.css
@@ -2,6 +2,8 @@
   --background: #d1d8e5;
   --light-font-color: rgb(211, 218, 227);
   --button-background: #3b74f2;
+  --shipping-disclaimer-background: #c7ffa6;
+  --shippping-disclaimer-font: #237a00;
 }
 
 * {
@@ -45,11 +47,17 @@ img {
   justify-content: space-between;
   align-items: center;
   background-color: var(--background);
+  z-index: 1;
 }
 
 .shopping-cart-icon {
   position: relative;
   cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.shopping-cart-icon:hover {
+  transform: scale(1.15);
 }
 
 .amount {
@@ -72,18 +80,27 @@ img {
 
 .hero-bg {
   width: 100%;
-  height: calc(100vh - 500px);
-  /* background: url(../../media/images/hero/pexels-karolina-grabowska-4198415.jpg)
-    center/cover no-repeat; */
+  height: 25rem;
   color: white;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.hero-bg .hero-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
 }
 
 .hero-bg h1 {
-  font-size: 2.625rem;
+  position: absolute;
+  bottom: 3.125rem;
+  font-size: 3.125rem;
 }
 
 .lower-hero-bar {
@@ -98,10 +115,15 @@ img {
 
 .lower-hero-bar ul li {
   text-align: center;
+  transition: transform 0.2s;
 }
 
 .lower-hero-bar ul li * {
   margin: 0.1875rem 0;
+}
+
+.lower-hero-bar ul li:hover {
+  transform: scale(1.15);
 }
 
 .products {
@@ -115,6 +137,7 @@ img {
 
 .products .title {
   text-align: center;
+  margin-bottom: 1.875rem;
 }
 
 .products-showcase-list {
@@ -132,6 +155,13 @@ img {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  border: 0.03125rem solid var(--light-font-color);
+  padding-bottom: 1.5625rem;
+  transition: transform 0.2s;
+}
+
+.product-showcase:hover {
+  transform: translateY(-5%);
 }
 
 .product-showcase .image {
@@ -145,6 +175,7 @@ img {
 
 .product-showcase-text {
   margin-top: 0.625rem;
+  padding: 0 0.9375rem;
   height: 5.3125rem;
   text-align: center;
   display: flex;
@@ -168,6 +199,7 @@ img {
   border: none;
   border-radius: 0.3125rem;
   cursor: pointer;
+  margin-top: 0.4375rem;
 }
 
 .add-button * {
@@ -277,7 +309,7 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 0 2.5rem;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
 }
 
 .change-amount {
@@ -289,6 +321,22 @@ img {
 
 .change-amount i {
   cursor: pointer;
+}
+
+.free-shipping {
+  display: block;
+  background-color: var(--shipping-disclaimer-background);
+  color: var(--shippping-disclaimer-font);
+  font-size: 1.125rem;
+  font-weight: 700;
+  padding: 0.9375rem;
+  border-radius: 3.125rem;
+  margin: 0.9375rem 0;
+}
+
+.invisible,
+.invisible-separator {
+  display: none;
 }
 
 .finish-button {
